# Contact-Extractor

./: .gitignore  app.py  index.html  main.py  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: azure-static-web-apps-orange-sea-034c0e81e.yml
