[project]
name = "flask-email-extractor"
version = "0.1.0"
description = "A Flask app that extracts emails and contact info from websites"
authors = [
  { name = "Saeed Ali", email = "you@example.com" }
]
dependencies = [
  "beautifulsoup4>=4.13.4",
  "email-validator>=2.2.0",
  "flask>=3.1.0",
  "flask-sqlalchemy>=3.1.1",
  "gunicorn>=23.0.0",
  "psycopg2-binary>=2.9.10",
  "requests>=2.32.3",
  "trafilatura>=2.0.0"
]
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
