[tool.poetry]
name = "flask-email-extractor"
version = "0.1.0"
description = "A Flask app that extracts emails and contact info from websites"
authors = ["Saeed Ali <saeedalisdk@gmail.com>"]
packages = [{ include = "main" }]  # optional if using a package folder

[tool.poetry.dependencies]
python = "^3.11"
flask = ">=3.1.0"
gunicorn = ">=23.0.0"
requests = ">=2.32.3"
beautifulsoup4 = ">=4.13.4"
email-validator = ">=2.2.0"
flask-sqlalchemy = ">=3.1.1"
psycopg2-binary = ">=2.9.10"
trafilatura = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
